--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-<header>
+    <header> <!-- please indent code correctly before submitting in the future -->
   <nav>
     <a href="play.html">Trivia</a> <a href="facts.html">Learn</a>
   </nav>
@@ -22,7 +22,7 @@
 <p><button id="trivia"> <a href="play.html"> Trivia</a></button> <button id="learn"> <a href= "facts.html">Get the Facts</a></button></p>
 </div>
 
-
+<!-- remove empty white space -->
   <footer>
 <p>Diabetes Game &copy; 2015</p>
   </footer>
